# data-contract-enforcer

./: .env.example  DOMAIN_NOTES.md  README.md  pyproject.toml  requirements.txt
contract_registry/: subscriptions.yaml
contracts/: ai_extensions.py  attributor.py  generator.py  llm_client.py  report_generator.py  runner.py  schema_analyzer.py
docs/: TRP1 Challenge Week 7_ Data Contract Enforcer.md  TRP1 Practitioner Manual_ Data Contract Enforcer.md  final_report.md  interim_report.md
enforcer_report/: report_data.json
generated_contracts/: week3_extractions.yaml  week3_extractions_dbt.yml  week5_events.yaml  week5_events_dbt.yml
outputs/traces/: runs.jsonl
outputs/week1/: intent_records.jsonl
outputs/week2/: verdicts.jsonl
outputs/week3/: extractions.jsonl  extractions_violated.jsonl
outputs/week4/: lineage_snapshots.jsonl
outputs/week5/: events.jsonl
schema_snapshots/: baselines.json
schema_snapshots/week3-document-refinery-extractions/: 20260331_211149.yaml  20260403_194953.yaml
tests/: conftest.py  test_ai_extensions.py  test_attributor.py  test_generator.py  test_llm_client.py  test_report_generator.py  test_runner.py  test_schema_analyzer.py
validation_reports/: ai_extensions.json  baseline_run.json  schema_evolution_week3.json  violated_run.json
violation_log/: violations.jsonl
